cncProd/force-app/main/default/objects/Showroom_Questions_List__c/Showroom_Questions_List__c.object-meta.xml
<CustomObject>
    <label>Showroom Questions List</label>
    <nameField>
        <label>Showroom Questions List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showroom Questions Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>