cncProd/force-app/main/default/objects/Showroom_Questions_List__c/fields/Daily_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Daily_Checklist__c</fullName>
    <label>Daily Checklist</label>
    <referenceTo>Daily_Checklist__c</referenceTo>
    <relationshipLabel>Showroom Questions Lists</relationshipLabel>
    <relationshipName>Showroom_Questions_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>