cncProd/force-app/main/default/objects/Showroom_Questions_List__c/fields/Showroom_Questions_Master__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Questions_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom Questions Master</label>
    <referenceTo>Showroom_Questions_Master__c</referenceTo>
    <relationshipLabel>Showroom Questions Lists</relationshipLabel>
    <relationshipName>Showroom_Questions_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>